--- a/routes/main.html
+++ b/routes/main.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/typescript" src="script.ts"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <meta charset="UTF-8">
     <title>Mars</title>
-    <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
-    <script src="https://rawgit.com/basarat/typescript-script/master/transpiler.js"></script>
 </head>
 <body onload="initView()">
 <span>
     <div id="canvas_place">
-        <canvas id="canvas" width="300" height="300"></canvas>
+        <canvas id="canvas" width="300" height="300" hidden></canvas>
     </div>
     <div id="data_reader">
         <label id="map_reader" class="saving_field">
             <div>Карта</div>
-            <textarea id="map_area">1 2 3 4
-1 2 3 4</textarea>
+            <textarea id="map_area">[[1,2,3,4],[1,2,3,4]]</textarea>
             <button onclick="saveMap()"> Save </button>
         </label>
         <label id="way_reader" class="saving_field">
             <div>Путь марсохода</div>
-            <textarea id="path_area">RRDRU</textarea>
+            <textarea id="path_area">{"start":{"x":0,"y":0},"path":["RIGHT", "RIGHT", "DOWN","RIGHT"]}</textarea>
             <button id="run_btn" disabled onclick="runWay()"> Run! </button>
         </label>
     </div>
@@ -30,130 +26,175 @@
 </span>
 </body>
 <script>
-const canvas = document.getElementById("canvas");
-let dataWidth;
-let dataHeight;
-let size;
-let ctx;
-let canvasWidth;
-let canvasHeight;
-let curArrData;
-function saveMap() {
-    const field = document.getElementById("map_area");
-    const str = String(field.value);
-    if (str.match(/[^\d\n\s]/gi) != null) {
-        alert("Во вводе не должно быть ничего кроме цифр");
-        return;
-    }
-    const arrData = str.split("\n").map(function (elem) {
-        return elem.split(" ");
+var __awaiter = (this && this.__awaiter) || function (thisArg, _arguments, P, generator) {
+    function adopt(value) { return value instanceof P ? value : new P(function (resolve) { resolve(value); }); }
+    return new (P || (P = Promise))(function (resolve, reject) {
+        function fulfilled(value) { try { step(generator.next(value)); } catch (e) { reject(e); } }
+        function rejected(value) { try { step(generator["throw"](value)); } catch (e) { reject(e); } }
+        function step(result) { result.done ? resolve(result.value) : adopt(result.value).then(fulfilled, rejected); }
+        step((generator = generator.apply(thisArg, _arguments || [])).next());
     });
-    for (let line of arrData) {
-        console.log(line);
-        if (line.length != arrData[0].length) {
-            alert("Matrix is incorrect");
-            return;
-        }
+};
+var __generator = (this && this.__generator) || function (thisArg, body) {
+    var _ = { label: 0, sent: function() { if (t[0] & 1) throw t[1]; return t[1]; }, trys: [], ops: [] }, f, y, t, g;
+    return g = { next: verb(0), "throw": verb(1), "return": verb(2) }, typeof Symbol === "function" && (g[Symbol.iterator] = function() { return this; }), g;
+    function verb(n) { return function (v) { return step([n, v]); }; }
+    function step(op) {
+        if (f) throw new TypeError("Generator is already executing.");
+        while (_) try {
+            if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
+            if (y = 0, t) op = [op[0] & 2, t.value];
+            switch (op[0]) {
+                case 0: case 1: t = op; break;
+                case 4: _.label++; return { value: op[1], done: false };
+                case 5: _.label++; y = op[1]; op = [0]; continue;
+                case 7: op = _.ops.pop(); _.trys.pop(); continue;
+                default:
+                    if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) { _ = 0; continue; }
+                    if (op[0] === 3 && (!t || (op[1] > t[0] && op[1] < t[3]))) { _.label = op[1]; break; }
+                    if (op[0] === 6 && _.label < t[1]) { _.label = t[1]; t = op; break; }
+                    if (t && _.label < t[2]) { _.label = t[2]; _.ops.push(op); break; }
+                    if (t[2]) _.ops.pop();
+                    _.trys.pop(); continue;
+            }
+            op = body.call(thisArg, _);
+        } catch (e) { op = [6, e]; y = 0; } finally { f = t = 0; }
+        if (op[0] & 5) throw op[1]; return { value: op[0] ? op[1] : void 0, done: true };
     }
-    applyDataToMap(arrData);
+};
+var canvas = document.getElementById("canvas");
+var dataWidth;
+var dataHeight;
+var squareSize;
+var ctx;
+var canvasWidth;
+var canvasHeight;
+var curArrData;
+function saveMap() {
+    return __awaiter(this, void 0, void 0, function () {
+        var field, arrData, _i, arrData_1, line;
+        return __generator(this, function (_a) {
+            switch (_a.label) {
+                case 0:
+                    field = document.getElementById("map_area");
+                    return [4 /*yield*/, JSON.parse(field.value)];
+                case 1:
+                    arrData = _a.sent();
+                    for (_i = 0, arrData_1 = arrData; _i < arrData_1.length; _i++) {
+                        line = arrData_1[_i];
+                        console.log(line);
+                        if (line.length != arrData[0].length) {
+                            alert("Matrix is incorrect");
+                            return [2 /*return*/];
+                        }
+                    }
+                    applyDataToMap(arrData);
+                    return [2 /*return*/];
+            }
+        });
+    });
 }
 function applyDataToMap(arrData) {
+    canvas.hidden = false;
     curArrData = arrData;
     dataWidth = arrData[0].length;
     dataHeight = arrData.length;
-    size = Math.min(innerWidth * 0.95 / dataWidth, innerHeight * 0.95 / dataHeight);
+    squareSize = Math.min(innerWidth * 0.95 / dataWidth, innerHeight * 0.95 / dataHeight);
     ctx = canvas.getContext('2d');
-    canvasWidth = dataWidth * size;
-    canvasHeight = dataHeight * size;
-    canvas.setAttribute("width", String(dataWidth * size));
-    canvas.setAttribute("height", String(dataHeight * size));
+    canvasWidth = dataWidth * squareSize;
+    canvasHeight = dataHeight * squareSize;
+    canvas.setAttribute("width", String(dataWidth * squareSize));
+    canvas.setAttribute("height", String(dataHeight * squareSize));
     console.log(dataHeight);
     console.log(dataWidth);
-    clearCanvas();
+    refreshCanvas();
     document.getElementById("run_btn").disabled = false;
 }
-function clearCanvas() {
+var patterns = new Array(6);
+function refreshCanvas() {
     ctx.fillStyle = "#ffe4ff";
     ctx.fillRect(0, 0, canvas.width, canvas.height);
     ctx.fillStyle = "#000000";
-    ctx.font = Math.max(30, size / 100) + "px Arial";
-    for (let i = 0; i < dataHeight; i++) {
-        for (let j = 0; j < dataWidth; j++) {
-            ctx.fillText(curArrData[i][j], (j + 0.5) * size, (i + 0.5) * size, size);
+    ctx.font = Math.max(30, squareSize / 100) + "px Arial";
+    for (var i = 0; i < dataHeight; i++) {
+        for (var j = 0; j < dataWidth; j++) {
+            ctx.fillText(curArrData[i][j], (j + 0.5) * squareSize, (i + 0.5) * squareSize, squareSize);
+            ctx.drawImage(patterns[curArrData[i][j]-1], j * squareSize, i * squareSize, squareSize, squareSize);
         }
-    }
-    for (let i = 0; i < dataWidth; i++) {
-        ctx.beginPath();
-        ctx.moveTo(i * size, canvasHeight);
-        ctx.lineTo(i * size, 0);
-        ctx.strokeStyle = "red";
-        ctx.stroke();
-    }
-    for (let i = 0; i < dataHeight; i++) {
-        ctx.beginPath();
-        ctx.moveTo(canvasWidth, i * size);
-        ctx.lineTo(0, i * size);
-        ctx.strokeStyle = "red";
-        ctx.stroke();
     }
 }
 function initCanvas() {
-    const size = window.innerHeight;
+    var size = window.innerHeight;
     canvas.setAttribute("width", String(size * 0.9));
     canvas.setAttribute("height", String(size * 0.95));
-    const ctx = canvas.getContext('2d');
-    const grad = ctx.createLinearGradient(0, 0, canvas.width, canvas.height);
-    grad.addColorStop(0, "magenta");
-    grad.addColorStop(0.5, "blue");
-    grad.addColorStop(1.0, "red");
-    ctx.fillStyle = grad;
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = null;
-    ctx.fillText("Big smile!", 10, 90);
 }
 function runWay() {
-    clearCanvas();
-    const pathField = document.getElementById("path_area");
-    const data = pathField.value;
-    const ctx = canvas.getContext('2d');
-    ctx.beginPath();
-    ctx.moveTo(size / 2, size / 2);
-    var curX = size / 2;
-    var curY = size / 2;
-    const deltaX = {
-        'U': 0,
-        'D': 0,
-        'R': +1,
-        'L': -1
-    };
-    const deltaY = {
-        'U': -1,
-        'D': +1,
-        'R': 0,
-        'L': 0
-    };
-    for (const c of data) {
-        curX += deltaX[c] * size;
-        curY += deltaY[c] * size;
-        ctx.lineTo(curX, curY);
-        if (curX > canvasWidth || curY > canvasHeight || curX < 0 || curY < 0) {
-            alert("You've lost");
-            break;
-        }
+    return __awaiter(this, void 0, void 0, function () {
+        var pathField, pathObject, data, ctx, curX, curY, deltaX, deltaY, _i, data_1, c, savedWidth;
+        return __generator(this, function (_a) {
+            switch (_a.label) {
+                case 0:
+                    refreshCanvas();
+                    pathField = document.getElementById("path_area");
+                    return [4 /*yield*/, JSON.parse(pathField.value)];
+                case 1:
+                    pathObject = _a.sent();
+                    console.log(pathObject);
+                    data = pathObject.path;
+                    ctx = canvas.getContext('2d');
+                    ctx.beginPath();
+                    ctx.moveTo(squareSize * (pathObject.start.x + 1 - 0.5), squareSize * (pathObject.start.y + 1 - 0.5));
+                    curX = squareSize / 2;
+                    curY = squareSize / 2;
+                    deltaX = {
+                        'CHARGE': 0,
+                        'UP': 0,
+                        'DOWN': 0,
+                        'RIGHT': +1,
+                        'LEFT': -1
+                    };
+                    deltaY = {
+                        'CHARGE': 0,
+                        'UP': -1,
+                        'DOWN': +1,
+                        'RIGHT': 0,
+                        'LEFT': 0
+                    };
+                    for (_i = 0, data_1 = data; _i < data_1.length; _i++) {
+                        c = data_1[_i];
+                        curX += deltaX[c] * squareSize;
+                        curY += deltaY[c] * squareSize;
+                        ctx.lineTo(curX, curY);
+                        if (curX > canvasWidth || curY > canvasHeight || curX < 0 || curY < 0) {
+                            alert("You've lost");
+                            break;
+                        }
+                    }
+                    savedWidth = ctx.lineWidth;
+                    ctx.lineWidth = 10;
+                    ctx.strokeStyle = "white";
+                    ctx.arc(curX, curY, squareSize / 6, 0, 2 * Math.PI);
+                    ctx.stroke();
+                    ctx.beginPath();
+                    ctx.arc(curX, curY, squareSize / 6, 0, 2 * Math.PI);
+                    ctx.fill();
+                    ctx.lineWidth = savedWidth;
+                    ctx.stroke();
+                    return [2 /*return*/];
+            }
+        });
+    });
+}
+function loadPictures() {
+    for (var i = 0; i < 6; i++) {
+        patterns[i] = new Image();
+        patterns[i].src = "images/patterns/type" + (i + 1).toString() + ".png";
     }
-    var a = ctx.lineWidth;
-    ctx.lineWidth = 10;
-    ctx.strokeStyle = "black";
-    ctx.arc(curX, curY, size / 6, 0, 2 * Math.PI);
-    ctx.stroke();
-    ctx.beginPath();
-    ctx.arc(curX, curY, size / 6, 0, 2 * Math.PI);
-    ctx.fill();
-    ctx.lineWidth = a;
-    ctx.stroke();
 }
 function initView() {
     initCanvas();
+    loadPictures();
 }
+
 </script>
 </html>
